--- a/fieldBy/Main/Campaign/Campaign.storyboard
+++ b/fieldBy/Main/Campaign/Campaign.storyboard
@@ -310,6 +310,13 @@
                                                         <rect key="frame" x="0.0" y="0.0" width="414" height="590"/>
                                                         <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
                                                     </button>
+                                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="bll-oh-N5O">
+                                                        <rect key="frame" x="8" y="561" width="42" height="21"/>
+                                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                        <nil key="textColor"/>
+                                                        <nil key="highlightedColor"/>
+                                                    </label>
                                                 </subviews>
                                                 <constraints>
                                                     <constraint firstItem="9H6-xn-OW2" firstAttribute="leading" secondItem="0bx-xE-l0u" secondAttribute="leading" id="YPy-Kp-gHl"/>
