--- a/fieldBy/Main/Info/Noti/Noti.storyboard
+++ b/fieldBy/Main/Info/Noti/Noti.storyboard
@@ -49,19 +49,19 @@
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="LJM-0o-NGJ">
-                                                    <rect key="frame" x="318" y="0.0" width="18" height="22"/>
+                                                    <rect key="frame" x="318" y="10" width="18" height="22"/>
                                                     <color key="tintColor" red="0.46274509803921571" green="0.43529411764705883" blue="0.43529411764705883" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                     <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
                                                     <state key="normal" image="xmark" catalog="system"/>
                                                 </button>
-                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="알림 제목" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="hFO-Ra-QUw">
-                                                    <rect key="frame" x="0.0" y="10" width="60" height="20"/>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="알림 제목" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="hFO-Ra-QUw">
+                                                    <rect key="frame" x="0.0" y="10" width="60" height="19.5"/>
                                                     <fontDescription key="fontDescription" name="AppleSDGothicNeo-Regular" family="Apple SD Gothic Neo" pointSize="16"/>
                                                     <color key="textColor" name="Black"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="알림 제목" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="qDA-Yw-JE4">
-                                                    <rect key="frame" x="0.0" y="38" width="48.5" height="16"/>
+                                                    <rect key="frame" x="0.0" y="37.5" width="48.5" height="16"/>
                                                     <fontDescription key="fontDescription" name="AppleSDGothicNeo-Regular" family="Apple SD Gothic Neo" pointSize="13"/>
                                                     <color key="textColor" red="0.46274509803921571" green="0.43529411764705883" blue="0.43529411764705883" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                     <nil key="highlightedColor"/>
@@ -88,12 +88,14 @@
                                                 </view>
                                             </subviews>
                                             <constraints>
-                                                <constraint firstItem="LJM-0o-NGJ" firstAttribute="top" secondItem="bkZ-pR-SCh" secondAttribute="top" id="03F-vw-MkM"/>
+                                                <constraint firstItem="LJM-0o-NGJ" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="hFO-Ra-QUw" secondAttribute="trailing" constant="20" id="5F1-on-izC"/>
+                                                <constraint firstItem="Vnt-UY-pqX" firstAttribute="top" relation="greaterThanOrEqual" secondItem="qDA-Yw-JE4" secondAttribute="bottom" constant="5" id="G66-4F-cRs"/>
                                                 <constraint firstAttribute="trailing" secondItem="yfG-qX-tJz" secondAttribute="trailing" id="ID9-hy-W62"/>
                                                 <constraint firstItem="yfG-qX-tJz" firstAttribute="leading" secondItem="bkZ-pR-SCh" secondAttribute="leading" id="MzX-wJ-IFA"/>
                                                 <constraint firstAttribute="bottom" secondItem="yfG-qX-tJz" secondAttribute="bottom" id="SN1-zy-Pux"/>
                                                 <constraint firstItem="hFO-Ra-QUw" firstAttribute="top" secondItem="bkZ-pR-SCh" secondAttribute="top" constant="10" id="TyO-Zp-GLn"/>
                                                 <constraint firstAttribute="bottom" secondItem="Vnt-UY-pqX" secondAttribute="bottom" constant="20" id="Uok-u0-qXH"/>
+                                                <constraint firstItem="LJM-0o-NGJ" firstAttribute="top" secondItem="bkZ-pR-SCh" secondAttribute="top" constant="10" id="Xjq-cV-JzH"/>
                                                 <constraint firstAttribute="trailing" secondItem="Lqb-md-CXi" secondAttribute="trailing" constant="2" id="af2-8B-re6"/>
                                                 <constraint firstItem="Vnt-UY-pqX" firstAttribute="leading" secondItem="bkZ-pR-SCh" secondAttribute="leading" id="dju-Dy-Ha5"/>
                                                 <constraint firstItem="Lqb-md-CXi" firstAttribute="centerY" secondItem="bkZ-pR-SCh" secondAttribute="centerY" id="eZl-u3-6Ab"/>
